# report

./: .env.example  .gitignore  AI医疗诊断报告_20250827_163818.md  BRAVE_SEARCH_INTEGRATION.md  FINAL_MCP_SYSTEM_SUMMARY.md  GOOGLE_SEARCH_INTEGRATION.md  MASTER_MCP_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP服务部署和API调用指南.md  PARALLEL_INSIGHTS_GENERATION_README.md  PARALLEL_NEWS_PROCESSING_README.md  PARALLEL_PROCESSING_README.md  README.md  SEARCH_MCP_INTEGRATION_GUIDE.md  SSE_STREAMING_GUIDE.md  api_server.py  config.py  config_manager.py  core_api_implementation.py  debug_analysis_mcp.py  debug_dimensions.py  debug_outline_creation.py  debug_streaming.py  debug_tavily.py  demo_enhanced_collector.py  demo_source_consistency.py  enhanced_market_collector.py  evaluate_report.py  evaluation_demo.py  example.txt  example_outline.txt  final_diagnosis_test.py  final_generated_report.txt  fix_code_block_issue.py  fix_double_hash.py  fix_headings.py  fix_md_converter.py  fix_md_headings.py  fix_mermaid_issue.py  fix_outline_report_format.py  (+124 more)
.cursor/: config.json
.cursor/rules/: api-routes.mdc  js.mdc
1/: config.py  generate_insights_report.py  generate_market_report.py  generate_outline_report.py  generate_research_report.py  intent_search_agent.py
1/collectors/: academic_collector.py  analysis_mcp.py  arxiv_collector.py  data_filter_processor.py  llm_processor.py  market_research_collector.py  news_breaking_analyzer.py  news_investment_analyzer.py  news_perspective_analyzer.py  news_policy_analyzer.py  news_trend_analyzer.py  outline_writer_mcp.py  paper_relevance_analyzer.py  parallel_llm_processor.py  research_direction_analyzer.py  summary_writer_mcp.py  user_interaction_mcp.py
1/generators/: __init__.py  report_generator.py
collectors/: __init__.py  academic_collector.py  analysis_mcp.py  article_analyzer.py  arxiv_collector.py  brave_search_collector.py  detailed_content_writer_mcp.py  google_search_collector.py  llm_processor.py  master_mcp.py  news_collector.py  news_innovation_analyzer.py  outline_writer_mcp.py  parallel_news_processor.py  query_generation_mcp.py  search_mcp.py  search_mcp_old.py  summary_writer_mcp.py  tavily_collector.py  web_content_collector.py
generators/: detailed_report_generator.py  report_generator.py
search_mcp/: DEPLOYMENT_GUIDE.md  Dockerfile  README.md  client_config_examples.md  docker-compose.yml  http_api_examples.md  main.py  pyproject.toml  test_refactor.py  test_simple_fastmcp.py
search_mcp/outputs/: .gitkeep
search_mcp/src/search_mcp/: __init__.py  config.py  generators.py  logger.py  models.py
search_mcp/tests/: __init__.py  test_mcp_server.py
tests/: __init__.py  test_enhanced_content_generation.py
tests/api/: __init__.py  test_api_fix.py  test_core_api.py  test_direct_api.py  test_ieee_api.py  test_translation_api.py
tests/collectors/: __init__.py  check_tavily_collector_methods.py  test_llm_processor.py  test_tavily_search.py
tests/data/: __init__.py  test_chinese_report.html  test_encoding_gb18030.txt  test_encoding_utf-8.txt  test_headings.md  test_report.md  test_report_gb18030.md  test_report_utf8.md
tests/generators/: __init__.py  test_report_generator.py  test_true_detailed_report_generator.py
tests/utils/: __init__.py  test_all_reference_formats.py  test_check_encoding.py  test_chinese_document.py  test_heading_normalize.py  test_markdown_generation.py  test_reference_normalize.py  test_report_references.py
